UI fix for aligning edit button of case studies to the right

--- a/core/sass/company-profile.scss
+++ b/core/sass/company-profile.scss
@@ -180,6 +180,8 @@
   li {
     display: table;
     margin-bottom: 10px;
+    width: 100%;
+
     span {
       display: table-cell;
       vertical-align: middle;
